Fixed answer overflow problem. Still need to rework viewing a question answers.

--- a/app/assets/stylesheets/modules/answer.sass
+++ b/app/assets/stylesheets/modules/answer.sass
@@ -6,9 +6,13 @@
     color: white
     margin: 4px 0
     border-radius: 2px
+    overflow-x: hidden
     a
+      display: block
+      margin: 0
+      padding: 0
       text-decoration: none
-      width: 100%
+      width: 1000px
       color: white
       font-size: em(16)
       .counter, .answer-entry
@@ -31,5 +35,7 @@
     background: none
     font-size: 0.9em
     padding-top: 15px
+    color: $lightColor
     a
+      display: inline
       color: $lightColor
